// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SetupForm renders the form correctly when setup flow mode is GA4 1`] = `
<div>
  <form
    class="googlesitekit-analytics-setup__form"
  >
    <p
      class="googlesitekit-margin-bottom-0"
    >
      Please select the account information below. You can change this later in your settings.
    </p>
    <div
      class="googlesitekit-setup-module__inputs"
    >
      <div
        class="mdc-select googlesitekit-analytics__select-account mdc-select--outlined"
      >
        <i
          class="mdc-select__dropdown-icon"
        />
        <input
          name="enhanced-select"
          type="hidden"
          value="22305160"
        />
        <div
          aria-disabled="false"
          class="mdc-select__selected-text"
          tabindex="0"
        >
          10up
        </div>
        <div
          class="mdc-notched-outline mdc-notched-outline--upgraded mdc-notched-outline--notched"
        >
          <div
            class="mdc-notched-outline__leading"
          />
          <div
            class="mdc-notched-outline__notch"
          >
            <label
              class="mdc-floating-label mdc-floating-label--float-above"
              for="googlesitekit-select-4"
              style=""
            >
              Account
            </label>
          </div>
          <div
            class="mdc-notched-outline__trailing"
          />
        </div>
      </div>
      <div
        class="mdc-select googlesitekit-analytics-4__select-property googlesitekit-analytics-4__select-property--loaded mdc-select--outlined"
      >
        <i
          class="mdc-select__dropdown-icon"
        />
        <input
          name="enhanced-select"
          type="hidden"
          value="property_create"
        />
        <div
          aria-disabled="false"
          class="mdc-select__selected-text"
          tabindex="0"
        >
          Set up a new property
        </div>
        <div
          class="mdc-notched-outline mdc-notched-outline--upgraded mdc-notched-outline--notched"
        >
          <div
            class="mdc-notched-outline__leading"
          />
          <div
            class="mdc-notched-outline__notch"
          >
            <label
              class="mdc-floating-label mdc-floating-label--float-above"
              for="googlesitekit-select-5"
              style=""
            >
              Property
            </label>
          </div>
          <div
            class="mdc-notched-outline__trailing"
          />
        </div>
      </div>
      <div
        class="mdc-select googlesitekit-analytics-4__select-webdatastream mdc-select--outlined"
      >
        <i
          class="mdc-select__dropdown-icon"
        />
        <input
          name="enhanced-select"
          type="hidden"
          value="webdatastream_create"
        />
        <div
          aria-disabled="false"
          class="mdc-select__selected-text"
          tabindex="0"
        >
          Set up a new web data stream
        </div>
        <div
          class="mdc-notched-outline mdc-notched-outline--upgraded mdc-notched-outline--notched"
        >
          <div
            class="mdc-notched-outline__leading"
          />
          <div
            class="mdc-notched-outline__notch"
          >
            <label
              class="mdc-floating-label mdc-floating-label--float-above"
              for="googlesitekit-select-6"
              style=""
            >
              Web Data Stream
            </label>
          </div>
          <div
            class="mdc-notched-outline__trailing"
          />
        </div>
      </div>
    </div>
    <div
      class="googlesitekit-setup-module__action"
    >
      <button
        class="mdc-button mdc-button--raised"
        target="_self"
      >
        <span
          class="mdc-button__label"
        >
          Configure Analytics
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`SetupForm renders the form correctly when setup flow mode is GA4 Legacy 1`] = `
<div>
  <form
    class="googlesitekit-analytics-setup__form"
  >
    <p
      class="googlesitekit-margin-bottom-0"
    >
      Please select the account information below. You can change this later in your settings.
    </p>
    <div
      class="googlesitekit-setup-module__inputs"
    >
      <div
        class="mdc-select googlesitekit-analytics__select-account mdc-select--outlined"
      >
        <i
          class="mdc-select__dropdown-icon"
        />
        <input
          name="enhanced-select"
          type="hidden"
          value="22305160"
        />
        <div
          aria-disabled="false"
          class="mdc-select__selected-text"
          tabindex="0"
        >
          10up
        </div>
        <div
          class="mdc-notched-outline mdc-notched-outline--upgraded mdc-notched-outline--notched"
        >
          <div
            class="mdc-notched-outline__leading"
          />
          <div
            class="mdc-notched-outline__notch"
          >
            <label
              class="mdc-floating-label mdc-floating-label--float-above"
              for="googlesitekit-select-7"
              style=""
            >
              Account
            </label>
          </div>
          <div
            class="mdc-notched-outline__trailing"
          />
        </div>
      </div>
      <div
        class="mdc-select googlesitekit-analytics-4__select-property googlesitekit-analytics-4__select-property--loaded mdc-select--outlined"
      >
        <i
          class="mdc-select__dropdown-icon"
        />
        <input
          name="enhanced-select"
          type="hidden"
          value="1000"
        />
        <div
          aria-disabled="false"
          class="mdc-select__selected-text"
          tabindex="0"
        >
          Test GA4 Property (1000)
        </div>
        <div
          class="mdc-notched-outline mdc-notched-outline--upgraded mdc-notched-outline--notched"
        >
          <div
            class="mdc-notched-outline__leading"
          />
          <div
            class="mdc-notched-outline__notch"
          >
            <label
              class="mdc-floating-label mdc-floating-label--float-above"
              for="googlesitekit-select-8"
              style=""
            >
              Property
            </label>
          </div>
          <div
            class="mdc-notched-outline__trailing"
          />
        </div>
      </div>
      <div
        class="mdc-select googlesitekit-analytics-4__select-webdatastream mdc-select--outlined"
      >
        <i
          class="mdc-select__dropdown-icon"
        />
        <input
          name="enhanced-select"
          type="hidden"
          value="2000"
        />
        <div
          aria-disabled="false"
          class="mdc-select__selected-text"
          tabindex="0"
        >
          Test GA4 WebDataStream (1A2BCD345E)
        </div>
        <div
          class="mdc-notched-outline mdc-notched-outline--upgraded mdc-notched-outline--notched"
        >
          <div
            class="mdc-notched-outline__leading"
          />
          <div
            class="mdc-notched-outline__notch"
          >
            <label
              class="mdc-floating-label mdc-floating-label--float-above"
              for="googlesitekit-select-9"
              style=""
            >
              Web Data Stream
            </label>
          </div>
          <div
            class="mdc-notched-outline__trailing"
          />
        </div>
      </div>
    </div>
    <div
      class="googlesitekit-settings-notice googlesitekit-settings-notice--info googlesitekit-settings-notice--single-row"
    >
      <div
        class="googlesitekit-settings-notice__icon"
      >
        <svg />
      </div>
      <div
        class="googlesitekit-settings-notice__body"
      >
        <div
          class="googlesitekit-settings-notice__text"
        >
          An associated Universal Analytics property will also be created.
        </div>
        <div
          class="googlesitekit-settings-notice__learn-more"
        >
          <a
            aria-label="Learn more (opens in a new tab)"
            class="googlesitekit-cta-link"
            href="https://sitekit.withgoogle.com/support/?doc=ga4"
            rel="noopener noreferrer"
            target="_blank"
          >
            Learn more
            <span
              class="googlesitekit-icon-wrapper"
              style="margin-left: 5px;"
            >
              <svg />
            </span>
          </a>
        </div>
      </div>
      
    </div>
    <div
      class="googlesitekit-setup-module__action"
    >
      <button
        class="mdc-button mdc-button--raised"
        disabled=""
        target="_self"
      >
        <span
          class="mdc-button__label"
        >
          Configure Analytics
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`SetupForm renders the form correctly when setup flow mode is GA4 Transitional 1`] = `
<div>
  <form
    class="googlesitekit-analytics-setup__form"
  >
    <p
      class="googlesitekit-margin-bottom-0"
    >
      Please select the account information below. You can change this later in your settings.
    </p>
    <div
      class="googlesitekit-setup-module__inputs"
    >
      <div
        class="mdc-select googlesitekit-analytics__select-account mdc-select--outlined"
      >
        <i
          class="mdc-select__dropdown-icon"
        />
        <input
          name="enhanced-select"
          type="hidden"
          value="22305160"
        />
        <div
          aria-disabled="false"
          class="mdc-select__selected-text"
          tabindex="0"
        >
          10up
        </div>
        <div
          class="mdc-notched-outline mdc-notched-outline--upgraded mdc-notched-outline--notched"
        >
          <div
            class="mdc-notched-outline__leading"
          />
          <div
            class="mdc-notched-outline__notch"
          >
            <label
              class="mdc-floating-label mdc-floating-label--float-above"
              for="googlesitekit-select-10"
              style=""
            >
              Account
            </label>
          </div>
          <div
            class="mdc-notched-outline__trailing"
          />
        </div>
      </div>
      <div
        class="mdc-select googlesitekit-analytics__select-property mdc-select--outlined"
      >
        <i
          class="mdc-select__dropdown-icon"
        />
        <input
          name="enhanced-select"
          type="hidden"
          value="1000"
        />
        <div
          aria-disabled="false"
          class="mdc-select__selected-text"
          tabindex="0"
        >
          Test GA4 Property (1000)
        </div>
        <div
          class="mdc-notched-outline mdc-notched-outline--upgraded mdc-notched-outline--notched"
        >
          <div
            class="mdc-notched-outline__leading"
          />
          <div
            class="mdc-notched-outline__notch"
          >
            <label
              class="mdc-floating-label mdc-floating-label--float-above"
              for="googlesitekit-select-11"
              style=""
            >
              Property
            </label>
          </div>
          <div
            class="mdc-notched-outline__trailing"
          />
        </div>
      </div>
      <div
        class="mdc-select googlesitekit-analytics-4__select-webdatastream mdc-select--outlined"
      >
        <i
          class="mdc-select__dropdown-icon"
        />
        <input
          name="enhanced-select"
          type="hidden"
          value="2000"
        />
        <div
          aria-disabled="false"
          class="mdc-select__selected-text"
          tabindex="0"
        >
          Test GA4 WebDataStream (1A2BCD345E)
        </div>
        <div
          class="mdc-notched-outline mdc-notched-outline--upgraded mdc-notched-outline--notched"
        >
          <div
            class="mdc-notched-outline__leading"
          />
          <div
            class="mdc-notched-outline__notch"
          >
            <label
              class="mdc-floating-label mdc-floating-label--float-above"
              for="googlesitekit-select-12"
              style=""
            >
              Web Data Stream
            </label>
          </div>
          <div
            class="mdc-notched-outline__trailing"
          />
        </div>
      </div>
    </div>
    <div
      class="googlesitekit-settings-notice googlesitekit-settings-notice--info googlesitekit-settings-notice--multi-row"
    >
      <div
        class="googlesitekit-settings-notice__icon"
      >
        <svg />
      </div>
      <div
        class="googlesitekit-settings-notice__body"
      >
        <div
          class="googlesitekit-settings-notice__text"
        >
          You need to connect the Universal Analytics property that’s associated with this Google Analytics 4 property.
        </div>
        <div
          class="googlesitekit-settings-notice__inner-row"
        >
          <div
            class="googlesitekit-settings-notice__children-container"
          >
            <div
              class="googlesitekit-setup-module__inputs"
            >
              <div
                class="mdc-select googlesitekit-analytics__select-property mdc-select--outlined"
              >
                <i
                  class="mdc-select__dropdown-icon"
                />
                <input
                  name="enhanced-select"
                  type="hidden"
                  value="UA-152925174-1"
                />
                <div
                  aria-disabled="false"
                  class="mdc-select__selected-text"
                  tabindex="0"
                >
                  wegweg (UA-152925174-1)
                </div>
                <div
                  class="mdc-notched-outline mdc-notched-outline--upgraded mdc-notched-outline--notched"
                >
                  <div
                    class="mdc-notched-outline__leading"
                  />
                  <div
                    class="mdc-notched-outline__notch"
                  >
                    <label
                      class="mdc-floating-label mdc-floating-label--float-above"
                      for="googlesitekit-select-13"
                      style=""
                    >
                      Property
                    </label>
                  </div>
                  <div
                    class="mdc-notched-outline__trailing"
                  />
                </div>
              </div>
              <div
                class="mdc-select googlesitekit-analytics__select-profile mdc-select--outlined"
              >
                <i
                  class="mdc-select__dropdown-icon"
                />
                <input
                  name="enhanced-select"
                  type="hidden"
                  value="profile_create"
                />
                <div
                  aria-disabled="false"
                  class="mdc-select__selected-text"
                  tabindex="0"
                >
                  Set up a new view
                </div>
                <div
                  class="mdc-notched-outline mdc-notched-outline--upgraded mdc-notched-outline--notched"
                >
                  <div
                    class="mdc-notched-outline__leading"
                  />
                  <div
                    class="mdc-notched-outline__notch"
                  >
                    <label
                      class="mdc-floating-label mdc-floating-label--float-above"
                      for="googlesitekit-select-14"
                      style=""
                    >
                      View
                    </label>
                  </div>
                  <div
                    class="mdc-notched-outline__trailing"
                  />
                </div>
              </div>
            </div>
            <div
              class="googlesitekit-setup-module__inputs googlesitekit-setup-module__inputs--multiline"
            >
              <div
                class="googlesitekit-analytics-profilename"
              >
                <div
                  class="mdc-text-field mdc-text-field--outlined"
                >
                  <input
                    class="mdc-text-field__input"
                    id="googlesitekit-textfield-2"
                    value="All Web Site Data"
                  />
                  <div
                    class="mdc-notched-outline mdc-notched-outline--upgraded mdc-notched-outline--notched"
                  >
                    <div
                      class="mdc-notched-outline__leading"
                    />
                    <div
                      class="mdc-notched-outline__notch"
                    >
                      <label
                        class="mdc-floating-label mdc-floating-label--float-above"
                        for="googlesitekit-textfield-2"
                        style=""
                      >
                        View Name
                      </label>
                    </div>
                    <div
                      class="mdc-notched-outline__trailing"
                    />
                  </div>
                </div>
                <p>
                  You can make changes to this view (e.g. exclude URL query parameters) in Google Analytics.
                </p>
              </div>
            </div>
          </div>
          <div
            class="googlesitekit-settings-notice__learn-more"
          >
            <a
              aria-label="Learn more (opens in a new tab)"
              class="googlesitekit-cta-link"
              href="https://sitekit.withgoogle.com/support/?doc=ga4"
              rel="noopener noreferrer"
              target="_blank"
            >
              Learn more
              <span
                class="googlesitekit-icon-wrapper"
                style="margin-left: 5px;"
              >
                <svg />
              </span>
            </a>
          </div>
        </div>
      </div>
      
    </div>
    <div
      class="googlesitekit-setup-module__action"
    >
      <button
        class="mdc-button mdc-button--raised"
        disabled=""
        target="_self"
      >
        <span
          class="mdc-button__label"
        >
          Configure Analytics
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`SetupForm renders the form correctly when setup flow mode is UA 1`] = `
<div>
  <form
    class="googlesitekit-analytics-setup__form"
  >
    <p
      class="googlesitekit-margin-bottom-0"
    >
      Please select the account information below. You can change this later in your settings.
    </p>
    <div
      class="googlesitekit-setup-module__inputs"
    >
      <div
        class="mdc-select googlesitekit-analytics__select-account mdc-select--outlined"
      >
        <i
          class="mdc-select__dropdown-icon"
        />
        <input
          name="enhanced-select"
          type="hidden"
          value="22305160"
        />
        <div
          aria-disabled="false"
          class="mdc-select__selected-text"
          tabindex="0"
        >
          10up
        </div>
        <div
          class="mdc-notched-outline mdc-notched-outline--upgraded mdc-notched-outline--notched"
        >
          <div
            class="mdc-notched-outline__leading"
          />
          <div
            class="mdc-notched-outline__notch"
          >
            <label
              class="mdc-floating-label mdc-floating-label--float-above"
              for="googlesitekit-select-0"
              style=""
            >
              Account
            </label>
          </div>
          <div
            class="mdc-notched-outline__trailing"
          />
        </div>
      </div>
      <div
        class="mdc-select googlesitekit-analytics__select-property mdc-select--outlined"
      >
        <i
          class="mdc-select__dropdown-icon"
        />
        <input
          name="enhanced-select"
          type="hidden"
          value="property_create"
        />
        <div
          aria-disabled="false"
          class="mdc-select__selected-text"
          tabindex="0"
        >
          Set up a new property
        </div>
        <div
          class="mdc-notched-outline mdc-notched-outline--upgraded mdc-notched-outline--notched"
        >
          <div
            class="mdc-notched-outline__leading"
          />
          <div
            class="mdc-notched-outline__notch"
          >
            <label
              class="mdc-floating-label mdc-floating-label--float-above"
              for="googlesitekit-select-1"
              style=""
            >
              Property
            </label>
          </div>
          <div
            class="mdc-notched-outline__trailing"
          />
        </div>
      </div>
      <div
        class="mdc-select googlesitekit-analytics__select-profile mdc-select--outlined"
      >
        <i
          class="mdc-select__dropdown-icon"
        />
        <input
          name="enhanced-select"
          type="hidden"
          value="profile_create"
        />
        <div
          aria-disabled="false"
          class="mdc-select__selected-text"
          tabindex="0"
        >
          Set up a new view
        </div>
        <div
          class="mdc-notched-outline mdc-notched-outline--upgraded mdc-notched-outline--notched"
        >
          <div
            class="mdc-notched-outline__leading"
          />
          <div
            class="mdc-notched-outline__notch"
          >
            <label
              class="mdc-floating-label mdc-floating-label--float-above"
              for="googlesitekit-select-3"
              style=""
            >
              View
            </label>
          </div>
          <div
            class="mdc-notched-outline__trailing"
          />
        </div>
      </div>
    </div>
    <div
      class="googlesitekit-setup-module__inputs googlesitekit-setup-module__inputs--multiline"
    >
      <div
        class="googlesitekit-analytics-profilename"
      >
        <div
          class="mdc-text-field mdc-text-field--outlined"
        >
          <input
            class="mdc-text-field__input"
            id="googlesitekit-textfield-0"
            value="All Web Site Data"
          />
          <div
            class="mdc-notched-outline mdc-notched-outline--upgraded mdc-notched-outline--notched"
          >
            <div
              class="mdc-notched-outline__leading"
            />
            <div
              class="mdc-notched-outline__notch"
            >
              <label
                class="mdc-floating-label mdc-floating-label--float-above"
                for="googlesitekit-textfield-0"
                style=""
              >
                View Name
              </label>
            </div>
            <div
              class="mdc-notched-outline__trailing"
            />
          </div>
        </div>
        <p>
          You can make changes to this view (e.g. exclude URL query parameters) in Google Analytics.
        </p>
      </div>
    </div>
    <div
      class="googlesitekit-settings-notice googlesitekit-settings-notice--info googlesitekit-settings-notice--single-row"
    >
      <div
        class="googlesitekit-settings-notice__icon"
      >
        <svg />
      </div>
      <div
        class="googlesitekit-settings-notice__body"
      >
        <div
          class="googlesitekit-settings-notice__text"
        >
          A Google Analytics 4 property will also be created.
        </div>
        <div
          class="googlesitekit-settings-notice__learn-more"
        >
          <a
            aria-label="Learn more (opens in a new tab)"
            class="googlesitekit-cta-link"
            href="https://sitekit.withgoogle.com/support/?doc=ga4"
            rel="noopener noreferrer"
            target="_blank"
          >
            Learn more
            <span
              class="googlesitekit-icon-wrapper"
              style="margin-left: 5px;"
            >
              <svg />
            </span>
          </a>
        </div>
      </div>
      
    </div>
    <div
      class="googlesitekit-setup-module__action"
    >
      <button
        class="mdc-button mdc-button--raised"
        disabled=""
        target="_self"
      >
        <span
          class="mdc-button__label"
        >
          Configure Analytics
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`SetupForm renders the form with a progress bar when GTM containers are not resolved 1`] = `
<div>
  <div
    class="mdc-linear-progress mdc-linear-progress--indeterminate"
    role="progressbar"
  >
    <div
      class="mdc-linear-progress__buffering-dots"
    />
    <div
      class="mdc-linear-progress__buffer"
    />
    <div
      class="mdc-linear-progress__bar mdc-linear-progress__primary-bar"
    >
      <span
        class="mdc-linear-progress__bar-inner"
      />
    </div>
    <div
      class="mdc-linear-progress__bar mdc-linear-progress__secondary-bar"
    >
      <span
        class="mdc-linear-progress__bar-inner"
      />
    </div>
  </div>
</div>
`;
